# APSS

./: .gitignore  APSS_memorie.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  README.md  camera_params.json  camera_rosmaster.py  control_pan_tilt.py  motor_calibration.json  pan_tilt_presets.json  rosmaster_main.py  subtree-pull.bat
docs/: APSS_Documentazione_Tecnica_v2_1.docx  APSS_Documentazione_Tecnica_v2_2.docx  APSS_Documentazione_Tecnica_v2_3.docx  APSS_Documentazione_Tecnica_v2_4_2.docx  APSS_Documentazione_Tecnica_v2_5.docx  APSS_Documentazione_Tecnica_v2_6.docx  APSS_Documentazione_Tecnica_v2_7.docx  APSS_allineamento_ RPi-PC-GitHub.md  APSS_allineamento_RPi-PC-GitHub.md  APSS_allineamento_RPi-VMware-GitHub.md  APSS_riepilogo_sessione_02mag2026.md  APSS_riepilogo_sessione_02mag2026_1.md  APSS_riepilogo_sessione_giu2026_1.md  APSS_riepilogo_sessione_mag2026_10.md  APSS_riepilogo_sessione_mag2026_2.md  APSS_riepilogo_sessione_mag2026_3.md  APSS_riepilogo_sessione_mag2026_4.md  APSS_riepilogo_sessione_mag2026_5.md  APSS_riepilogo_sessione_mag2026_6.md  APSS_riepilogo_sessione_mag2026_7.md  APSS_riepilogo_sessione_mag2026_8.md  APSS_riepilogo_sessione_mag2026_9.md  plan.md  (+6 more)
src/apss_ros2_pkg/: CMakeLists.txt
src/apss_ros2_pkg/config/: safety_rules.yaml
src/apss_ros2_pkg/launch/: apss_lidar.launch.py  rpm_node.launch.py  speed_calc_node.launch.py
src/apss_ros2_pkg/msg/: BatteryStats.msg
src/apss_ros2_pkg/rviz/: apss.rviz
src/apss_ros2_pkg/scripts/: alarm_node.py  battery_node.py  camera_publisher.py  navigation_controller_node.py  oled_node.py  safety_node.py
(+112 files in other folders)
